<?xml version="1.0" encoding="utf-8"?>

<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_overlay_layout"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView 
        android:id="@+id/fragment_overlay_title"
        style="@style/IntroView.Title"
        android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:layout_gravity="center_horizontal"
		android:gravity="bottom|center_horizontal"
		android:text="@string/fragment_overlay_text_title_exit" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >
        
        <TextView 
	        android:id="@+id/fragment_overlay_subtitle"
	        style="@style/IntroView.SubTitle"
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="right"
			android:text="@string/fragment_overlay_text_subtitle_exit" />
        
        <TextView 
	        android:id="@+id/fragment_overlay_subtitle_highlight"
	        style="@style/IntroView.SubTitleHighlight"
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="right"
			android:text="@string/fragment_overlay_text_subtitle_highlight_exit" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >
        
		<TextView
			android:id="@+id/fragment_overlay_button1"
			style="@style/IntroView.Button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:text="@string/fragment_overlay_button3_exit" />
		
		<TextView
			android:id="@+id/fragment_overlay_button3"
			style="@style/IntroView.Button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:text="@string/fragment_overlay_button1_exit" />
		
		<TextView
			android:id="@+id/fragment_overlay_button2"
			style="@style/IntroView.Button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="right"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:text="@string/fragment_overlay_button3_exit" />
		
	</LinearLayout>
	
    <Button
        android:id="@+id/fragment_overlay_ad"
        style="@style/IntroView.Ad"
        android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:gravity="center"
		android:text="@string/fragment_overlay_text_ad" />

</LinearLayout>
