<?xml version="1.0" encoding="utf-8"?>

<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:focusableInTouchMode="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:orientation="vertical">

    <TextView 
        android:id="@+id/fragment_edittext_title"
        style="@style/IntroView.Title"
        android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:paddingLeft="@dimen/edittext_horizontal_margin"
		android:paddingRight="@dimen/edittext_horizontal_margin"
		android:layout_gravity="center_horizontal"
		android:gravity="bottom|center_horizontal"
		android:text="@string/fragment_edittext_title" />

	<TextView
		android:id="@+id/fragment_edittext_subtitle"
		style="@style/IntroView.SubTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="@dimen/edittext_horizontal_margin"
		android:paddingRight="@dimen/edittext_horizontal_margin"
		android:gravity="center"
		android:layout_gravity="center"
		android:text="@string/fragment_edittext_subtitle" />
    
	<EditText
	    android:id="@+id/fragment_edittext_edittext"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingTop="@dimen/overlay_vertical_margin"
		android:paddingLeft="@dimen/edittext_horizontal_margin"
		android:paddingRight="@dimen/edittext_horizontal_margin"
		android:textColor="@color/white"
		android:textColorHighlight="@color/grey"
		android:textColorHint="@color/grey"
		android:textSize="@dimen/textSize_medium"
		android:maxLength="12"
		android:inputType="textPersonName"
		android:gravity="left"
		android:background="@color/transparent"
		android:hint="@string/fragment_edittext_hint" />
	
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="2dp"
	    android:layout_marginTop="2dp"
	    android:layout_marginLeft="@dimen/edittext_horizontal_margin"
		android:layout_marginRight="@dimen/edittext_horizontal_margin"
	    android:background="@color/light_grey" />
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/edittext_horizontal_margin"
		android:paddingRight="@dimen/edittext_horizontal_margin"
        android:orientation="horizontal" >
        
		<TextView
			android:id="@+id/fragment_edittext_button1"
			style="@style/IntroView.Button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="left"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:text="@string/fragment_edittext_button1" />
		
		<TextView
			android:id="@+id/fragment_edittext_button2"
			style="@style/IntroView.Button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="right"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:text="@string/fragment_edittext_button2" />
		
	</LinearLayout>
	
    <Button
        android:id="@+id/fragment_edittext_ad"
        style="@style/IntroView.Ad"
        android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:gravity="center"
		android:text="@string/fragment_overlay_text_ad" />

</LinearLayout>
